Fixed wedding party heading alignment

--- a/css/styles.less
+++ b/css/styles.less
@@ -134,6 +134,8 @@ p {
 }
 #weddingParty .section-heading {
 	color: #2369a4;
+	margin-top: 0;
+	padding-top: 50px;
 }
 #family .section-heading {
 	color: #6d3660;
